# rtmdet_worker_c

./: .dockerignore  .gitignore  Dockerfile  build_mmdeploy.sh
server/: .dockerignore  Dockerfile  package-lock.json  package.json  server.js  start.sh
server/static/: upload_image.html  upload_video.html
worker/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  requirements.txt
worker/model/: detail.json  pipeline.json
